recompiled using latest base16 templates

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -20,11 +20,11 @@
 @syntax-gutter-text-color: #84613d;
 @syntax-gutter-text-color-selected: #84613d;
 @syntax-gutter-background-color: #fbebd4;
-@syntax-gutter-background-color-selected: #e4c6a5;
+@syntax-gutter-background-color-selected: rgba(176, 176, 176, 0.33);
 
 // For git diff info. i.e. in the gutter
 // These are static and were not extracted from your textmate theme
-@syntax-color-renamed: #96CBFE;
-@syntax-color-added: #A8FF60;
-@syntax-color-modified: #E9C062;
-@syntax-color-removed: #CC6666;
+@syntax-color-renamed: #8ab1b0;
+@syntax-color-added: #889b4a;
+@syntax-color-modified: #f06431;
+@syntax-color-removed: #dc3958;
