--- a/styles/base.less
+++ b/styles/base.less
@@ -1,20 +1,22 @@
 // Atom template by Jan T. Sott (https://github.com/idleberg/)
 // Base16 scheme and Base16 Builder by Chris Kempson (https://github.com/chriskempson)
 
-@import "syntax-variables.less";
+@import 'syntax-variables';
+
 
 atom-text-editor,
 :host {
-  color: @syntax-text-color;
   background-color: @syntax-background-color;
+  color: @syntax-text-color;
+
   .gutter {
-    color: @syntax-gutter-text-color;
     background-color: @syntax-gutter-background-color;
+    color: @syntax-gutter-text-color;
   }
 
   .gutter .line-number.cursor-line {
-    color: @syntax-gutter-text-color-selected;
     background-color: @syntax-gutter-background-color-selected;
+    color: @syntax-gutter-text-color-selected;
   }
 
   .gutter .line-number.cursor-line-no-selection {
@@ -50,7 +52,8 @@ atom-text-editor,
     background-color: @syntax-selection-color;
   }
 
-  .line-number.cursor-line-no-selection, .line.cursor-line {
+  .line-number.cursor-line-no-selection,
+  .line.cursor-line {
     background-color: rgba(176, 176, 176, 0.33);
   }
 
@@ -60,11 +63,17 @@ atom-text-editor,
   color: #84613d;
 }
 
-.comment, .punctuation.definition.comment {
+.comment,
+.punctuation.definition.comment {
   color: #d6baad;
 }
 
-.punctuation.definition.string, .punctuation.definition.variable, .punctuation.definition.string, .punctuation.definition.parameters, .punctuation.definition.string, .punctuation.definition.array {
+.punctuation.definition.string,
+.punctuation.definition.variable,
+.punctuation.definition.string,
+.punctuation.definition.parameters,
+.punctuation.definition.string,
+.punctuation.definition.array {
   color: #84613d;
 }
 
@@ -84,11 +93,15 @@ atom-text-editor,
   color: #dc3958;
 }
 
-.entity.name.function, .meta.require, .support.function.any-method {
+.entity.name.function,
+.meta.require,
+.support.function.any-method {
   color: #8ab1b0;
 }
 
-.support.class, .entity.name.class, .entity.name.type.class {
+.support.class,
+.entity.name.class,
+.entity.name.type.class {
   color: #f79a32;
 }
 
@@ -108,7 +121,9 @@ atom-text-editor,
   color: #088649;
 }
 
-.string, .constant.other.symbol, .entity.other.inherited-class {
+.string,
+.constant.other.symbol,
+.entity.other.inherited-class {
   color: #889b4a;
 }
 
@@ -136,7 +151,8 @@ atom-text-editor,
   color: #f79a32;
 }
 
-.entity.other.attribute-name.id, .punctuation.definition.entity {
+.entity.other.attribute-name.id,
+.punctuation.definition.entity {
   color: #8ab1b0;
 }
 
@@ -148,7 +164,9 @@ atom-text-editor,
   color: #f79a32;
 }
 
-.markup.heading, .punctuation.definition.heading, .entity.name.section {
+.markup.heading,
+.punctuation.definition.heading,
+.entity.name.section {
   color: #8ab1b0;
 }
 
@@ -156,14 +174,16 @@ atom-text-editor,
   color: #f79a32;
 }
 
-.markup.bold, .punctuation.definition.bold {
-  font-weight: bold;
+.markup.bold,
+.punctuation.definition.bold {
   color: #f79a32;
+  font-weight: bold;
 }
 
-.markup.italic, .punctuation.definition.italic {
-  font-style: italic;
+.markup.italic,
+.punctuation.definition.italic {
   color: #98676a;
+  font-style: italic;
 }
 
 .markup.raw.inline {
@@ -187,8 +207,8 @@ atom-text-editor,
 }
 
 .meta.separator {
-  color: #84613d;
   background-color: #e4c6a5;
+  color: #84613d;
 }
 
 .markup.inserted {
@@ -215,11 +235,12 @@ atom-text-editor,
   color: #088649;
 }
 
-.punctuation.section.embedded, .variable.interpolation {
+.punctuation.section.embedded,
+.variable.interpolation {
   color: #7e602c;
 }
 
 .invalid.illegal {
-  color: #fbebd4;
   background-color: #dc3958;
+  color: #fbebd4;
 }
