--- a/index.less
+++ b/index.less
@@ -1,1 +1,12 @@
-@import './styles/base';
+
+// Kimbie (light)
+// A color scheme by Jan T. Sott
+// https://atom.io/themes/kimbie-light
+
+@import "styles/syntax-variables.less";
+
+@import "styles/editor.less";
+
+@import "styles/syntax/_base.less";
+@import "styles/syntax/cs.less";
+@import "styles/syntax/json.less";
