--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -1,30 +1,45 @@
-// This defines all syntax variables that syntax themes must implement when they
-// include a syntax-variables.less file.
+@import "colors.less";
+
+// Official Syntax Variables
 
 // General colors
-@syntax-text-color: #84613d;
-@syntax-cursor-color: #84613d;
-@syntax-selection-color: #e4c6a5;
-@syntax-background-color: #fbebd4;
+@syntax-text-color:            @black;
+@syntax-cursor-color:          @black;
+@syntax-selection-color:       @almost-white;
+@syntax-selection-flash-color: @very-dark-gray;
+@syntax-background-color:      @white;
 
 // Guide colors
-@syntax-wrap-guide-color: #e4c6a5;
-@syntax-indent-guide-color: #e4c6a5;
-@syntax-invisible-character-color: #e4c6a5;
+@syntax-wrap-guide-color:          @very-light-gray;
+@syntax-indent-guide-color:        @very-light-gray;
+@syntax-invisible-character-color: @very-light-gray;
 
 // For find and replace markers
-@syntax-result-marker-color: #e4c6a5;
-@syntax-result-marker-color-selected: #84613d;
+@syntax-result-marker-color:          @light-gray;
+@syntax-result-marker-color-selected: @very-light-gray;
 
 // Gutter colors
-@syntax-gutter-text-color: #84613d;
-@syntax-gutter-text-color-selected: #84613d;
-@syntax-gutter-background-color: #fbebd4;
-@syntax-gutter-background-color-selected: rgba(176, 176, 176, 0.33);
+@syntax-gutter-text-color:                @light-gray;
+@syntax-gutter-text-color-selected:       @dark-gray;
+@syntax-gutter-background-color:          @syntax-background-color;
+@syntax-gutter-background-color-selected: @syntax-selection-color;
 
 // For git diff info. i.e. in the gutter
-// These are static and were not extracted from your textmate theme
-@syntax-color-renamed: #8ab1b0;
-@syntax-color-added: #889b4a;
-@syntax-color-modified: #f06431;
-@syntax-color-removed: #dc3958;
+@syntax-color-renamed:  @blue;
+@syntax-color-added:    @green;
+@syntax-color-modified: @orange;
+@syntax-color-removed:  @red;
+
+// For language entity colors
+@syntax-color-variable:  @red;
+@syntax-color-constant:  @orange;
+@syntax-color-property:  @syntax-text-color;
+@syntax-color-value:     @green;
+@syntax-color-function:  @blue;
+@syntax-color-method:    @blue;
+@syntax-color-class:     @yellow;
+@syntax-color-keyword:   @purple;
+@syntax-color-tag:       @red;
+@syntax-color-attribute: @orange;
+@syntax-color-import:    @purple;
+@syntax-color-snippet:   @green;
